--- a/account.ui/src/index.html
+++ b/account.ui/src/index.html
@@ -7,7 +7,7 @@
   <title>Account</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body class="mat-typography">
   <app-root>Loading...</app-root>
 </body>
 </html>
