--- a/account.ui/src/index.html
+++ b/account.ui/src/index.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html lang="en">
 <head>
-<base href="/">
+<!-- base href="/" -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Account</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+<!-- link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet" -->
+<!-- link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" -->
 </head>
 <body class="mat-typography">
   <app-root>Loading...</app-root>
