death to auto-zoom

--- a/account.ui/src/index.html
+++ b/account.ui/src/index.html
@@ -3,7 +3,9 @@
 <head>
 <!-- base href="/" -->
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- maximum-scale is to try to stop the auto-zoom on input fields - supposedly it stops the user from zooming in Chrome
+    user-scalable=0 is also a possibility but it will prevent any zooming, NB 16px input font didn't work -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>Account</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <!-- link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet" -->
